# Job-Radar

./: .env.example  .gitignore  CHANGELOG.md  FAQ.md  README-dist.txt  README.md  WORKFLOW.md  cache.py  deps.py  icon.icns  job-radar.spec  lighthouserc.js  linkedin-post.md  macos-launcher.sh  pyproject.toml  scoring.py  search.py  sources.py  tracker.py
.github/workflows/: accessibility.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.5.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2.0-MILESTONE-AUDIT.md  v1.2.0-REQUIREMENTS.md  v1.2.0-ROADMAP.md  v1.3.0-REQUIREMENTS.md  v1.4.0-MILESTONE-AUDIT.md  v1.5.0-REQUIREMENTS.md  v2.0.0-MILESTONE-AUDIT.md  v2.0.0-REQUIREMENTS.md  v2.0.0-ROADMAP.md  v2.1.0-INTEGRATION-REPORT.md  v2.1.0-MILESTONE-AUDIT.md  v2.1.0-REQUIREMENTS.md  v2.1.0-ROADMAP.md
.planning/research/: ACCESSIBILITY.md  ARCHITECTURE.md  COMPETITIVE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  UX.md  VISUAL-DESIGN.md
installers/: README.md
installers/macos/: build-dmg.sh  generate-background.py
installers/windows/: build-installer.bat  generate-assets.py  (+1 more)
job_radar/: __init__.py  __main__.py  api_config.py  api_setup.py  banner.py  browser.py  cache.py  config.py  deduplication.py  paths.py  pdf_parser.py  profile_display.py  profile_editor.py  profile_manager.py  rate_limits.py  report.py  scoring.py  search.py  sources.py  staffing_firms.py  tracker.py  uninstaller.py  update_config.py  wizard.py
profiles/: _template.json
scripts/: build.bat  build.sh  generate_ci_report.py
tests/: conftest.py  test_api_config.py  test_browser.py  test_cli_update_flags.py  test_config.py  test_deduplication.py  test_entry_integration.py  test_paths.py  test_pdf_parser.py  test_profile_display.py  test_profile_editor.py  test_profile_manager.py  test_rate_limits.py  test_report.py  test_scoring.py  test_scoring_config.py  test_sources_api.py  test_tracker.py  test_uninstaller.py  test_ux.py  test_wizard.py
(+265 files in other folders)
