[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-radar"
version = "1.1.0"
description = "CLI job search tool that scores listings against your profile"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["requests", "beautifulsoup4", "platformdirs>=4.0", "pyfiglet", "colorama", "certifi", "questionary"]

[tool.setuptools]
packages = ["job_radar"]

[project.scripts]
job-radar = "job_radar.search:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
