[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-radar"
version = "2.1.2"
description = "CLI job search tool that scores listings against your profile"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["requests", "beautifulsoup4", "platformdirs>=4.0", "pyfiglet", "colorama", "certifi", "questionary", "python-dotenv", "pyrate-limiter", "rapidfuzz", "pdfplumber>=0.11.9", "python-dateutil>=2.9.0", "tabulate>=0.9.0", "customtkinter"]

[project.optional-dependencies]
dev = ["pytest>=9.0", "pytest-mock"]
build = ["pyinstaller", "pillow"]  # pillow for Windows icon conversion

[tool.setuptools]
packages = ["job_radar", "job_radar.gui"]

[project.scripts]
job-radar = "job_radar.search:main"

[project.gui-scripts]
job-radar-gui = "job_radar.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
